# my-discord-bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Pipfile  README.md  alembic.ini  app.py  config.py  database.py  docker-compose-ci.yml  docker-compose-pi.yml  docker-compose.yml  loggers.py  mygo.sqlite  pyproject.toml  requirements.txt  ruff.toml  secret.json  setup.sh
.github/workflows/: docker-build.yml  docker-deploy.yml  docker.yml  linter.yml
api/: Dockerfile  file_api.py
cogs/: __init__.py  leetcode.py
cogs/arcaea/: __init__.py  cmd.py  const.py  schema.py  utils.py
cogs/gpt/: __init__.py  cmd.py  const.py  tasks.py  utils.py
cogs/kasa/: __init__.py  cmd.py  const.py  tasks.py  utils.py
cogs/leetcode/: __init__.py  cmd.py  const.py  schema.py  tasks.py  utils.py
cogs/mygo/: __init__.py  cmd.py  const.py  schema.py  types.py  utils.py
cogs/pi/: __init__.py  cmd.py  const.py  tasks.py  utils.py
core/: __init__.py  classes.py  func.py  models.py
envExample/: arcaea.env  bot.env  db.env  docker.env  mqtt.env
json_data/: ffprobe_example.json
migrate/: env.py
migrate/versions/: 5a219a5aeafa_auto_generate_migration.py  d90997b91944_auto_generate_migration.py  ebab57671f85_auto_generate_migration.py
queries/: feed.graphql  problem_solve_page.graphql  problemset_page.graphql  profile_page.graphql
tests/cogs/gpt/: test_chat.py
tests/core/: test_func.py
