[tool.black]
line-length = 100

[tool.isort]
profile = "ruff"
line_length = 100

[tool.poetry]
name = "my-rpi5-discord-bot"
version = "0.0.0"
description = ""
authors = ["c8763yee <rrrrr4413@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.66.5"
requests = "^2.32.3"
aiohttp = "^3.10.5"
aiomqtt = "^2.3.0"
openai = "^1.41.1"
paho-mqtt = "^2.1.0"
pynacl = "^1.5.0"
python-dotenv = "^1.0.1"
discord-py={version="^2.4.0",extras=["voice"]}
psutil = "^6.0.0"


[tool.poetry.group.dev.dependencies]
pylint = "3.1.0"
ruff = "^0.4.4"
pre-commit = "^3.7.1"
ipython = "^8.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
